Replace Guava with standard Java where easily possible (#892)
Co-authored-by: Hannes Wellmann <hannes.wellmann@iils.de>